--- a/form.html
+++ b/form.html
@@ -19,8 +19,8 @@
                     <h5 class="text_inicial1">ESTABLECIMIENTO DE SALUD CENTINELA Y MEDIANTE ENCUESTA POBLACIONAL</h5>
                 </div>
                 <div class="border container p-2 bg-primary bg-gradient">
-                    <h5 class="text_inicial2">ANEXO 3:</h5>
-                    <h5 class="text_inicial2">VIGILANCIA CENTINELA DEL PRIMER EPISODIO PSICÓTICO</h5>
+                    <h5 class="text_inicial2">ANEXO 2:</h5>
+                    <h5 class="text_inicial2">VIGILANCIA CENTINELA EPISODIO DEPRESIVO MODERADO Y GRAVE</h5>
                     <h5 class="text_inicial2">FICHA DE REGISTRO</h5>
                 </div>
             </article>    
